# LiteRequest

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  build.rs  package-lock.json  package.json  plan.md  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: rust.yml
example/: app.jsx
src/: main.rs
src-tauri/: CNRT.json  Cargo.toml  request_catcher.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs
src-tauri/src/db/: operations.rs  schema.rs
src-tauri/src/http/: client.rs  curl.rs  interpolation.rs  mod.rs
src-tauri/src/import/: postman.rs
src-tauri/src/models/: collection.rs  environment.rs  mod.rs  request.rs  script.rs
src-tauri/src/scripting/: bridge.rs  context.rs  mod.rs  modules.rs  runtime.rs  typegen.rs
src-web/: App.tsx  index.css  index.html  main.tsx
src-web/components/editor/: CodeEditor.tsx  RequestEditor.tsx  ScriptEditor.tsx  UrlBar.tsx
src-web/components/inspector/: KvTable.tsx
src-web/components/layout/: Inspector.tsx  Sidebar.tsx  TopBar.tsx
src-web/components/response/: ResponseView.tsx
src-web/components/script/: ScriptView.tsx
src-web/components/search/: GlobalSearch.tsx
src-web/components/settings/: AppSettings.tsx  CollectionConfig.tsx
src-web/components/shared/: CollapsibleSection.tsx  TooltipPortal.tsx  VarDefTable.tsx  VariableInput.tsx
src-web/hooks/: useLayoutState.ts
src-web/lib/: api.ts  dynamicVars.ts  request.ts  types.ts  variables.ts
src-web/lib/__tests__/: dynamicVars.test.ts  types.test.ts
src/db/: operations.rs  schema.rs
src/http/: client.rs  curl.rs  interpolation.rs  mod.rs
src/models/: collection.rs  environment.rs  request.rs
src/ui/: app.rs  app_settings.rs  collection_config.rs  collection_tree.rs  environment_panel.rs  global_search.rs  history_panel.rs  import_export.rs  inspector_panel.rs  json_tree.rs  mod.rs  request_editor.rs  response_view.rs  theme.rs  var_highlight.rs
src/utils/: debounce.rs  mod.rs
