[package]
name = "lite_request"
version = "0.1.0"
edition = "2021"
description = "A functional & lightweight offline API client"

[dependencies]
# GUI
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "persistence", "x11", "wayland"] }
egui_extras = { version = "0.29", features = ["syntect"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "brotli", "http2", "rustls-tls", "socks"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Secrets
keyring = { version = "3", features = ["linux-native"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# URL parsing
url = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
