[package]
name = "lite-request"
version = "0.1.0"
edition = "2021"
description = "A functional & lightweight offline API client"

[lib]
name = "lite_request_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

# HTTP
reqwest = { version = "0.12", features = ["json", "brotli", "http2", "rustls-tls", "native-tls-alpn", "socks", "multipart"] }
mime_guess = "2"
base64 = "0.22"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"

# Secrets
keyring = { version = "3", features = ["linux-native"] }

# Clipboard
arboard = "3"

tauri-plugin-window-state = "2"

tracing = "0.1"
tracing-subscriber = "0.3"

# Scripting
rquickjs = { version = "0.11", features = ["loader", "macro"] }

# URL parsing
url = "2"

# Directories
dirs = "5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
